il browser non mi legge il css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Sass-Teambit</title>
   </head>
   <body>
-    
+    <div class="navbar-container">
+      <div class="navbar">
+        <div class="navbar-left">
+
+        </div>
+        <div class="navbar-right">
+            <ul>
+              <li> <a href="#">Pulsante 1</a> </li>
+              <li> <a href="#">Pulsante 2</a> </li>
+              <li> <a href="#">Pulsante 3</a> </li>
+              <li> <a href="#">Pulsante 4</a> </li>
+              <li> <a href="#">Pulsante 5</a> </li>
+            </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
