--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div class="navbar-container">
       <div class="navbar">
         <div class="navbar-left">
-
+          <img src="http://boolean.careers/images/common/logo.png" alt="">
         </div>
         <div class="navbar-right">
             <ul>
-              <li> <a href="#">Pulsante 1</a> </li>
-              <li> <a href="#">Pulsante 2</a> </li>
-              <li> <a href="#">Pulsante 3</a> </li>
-              <li> <a href="#">Pulsante 4</a> </li>
-              <li> <a href="#">Pulsante 5</a> </li>
+              <li> <a href="#">Solutions</a> </li>
+              <li> <a href="#">Pricing</a> </li>
+              <li> <a href="#">Blog</a> </li>
+              <li> <a href="#">Sign In</a> </li>
+              <li> <a href="#">Sign Up</a> </li>
             </ul>
         </div>
       </div>
