--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <li> <a href="#">Pricing</a> </li>
               <li> <a href="#">Blog</a> </li>
               <li> <a href="#">Sign In</a> </li>
-              <li> <a href="#">Sign Up</a> </li>
+              <li class="sign-up"> <a href="#">Sign Up</a> </li>
             </ul>
         </div>
       </div>
